test/e2e/fixtures/request-header-envoy-headers/manifests.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: request-header-envoy-headers-echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: request-header-envoy-headers-echo
  template:
    metadata:
      labels:
        app: request-header-envoy-headers-echo
    spec:
      containers:
        - name: kat-server
          image: (env('KAT_SERVER_IMAGE'))
          imagePullPolicy: IfNotPresent
          command: ["/work/kat-server"]
          env:
            - name: BACKEND
              value: request-header-envoy-headers-echo
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: request-header-envoy-headers-echo
spec:
  selector:
    app: request-header-envoy-headers-echo
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
---
apiVersion: getambassador.io/v3alpha1
kind: Mapping
metadata:
  name: request-header-envoy-headers
spec:
  ambassador_id: [(env('SLOT'))]
  hostname: "*"
  prefix: /request-header-envoy-headers/
  rewrite: /rewrite/
  timeout_ms: 5001
  service: request-header-envoy-headers-echo:8080
